trunk/appointment/src/objects/Calendar_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Advanced__c</fullName>
        <label>Advanced</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Editable_</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <picklist>
            <picklistValues>
                <fullName>All Objects</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Objects</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Filter__c</fullName>
        <label>Owner Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Calendar Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>